--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,3 +10,6 @@ img[alt="www.000webhost.com"] {
 .content-wrapper {
   background-color: #7ea0d3 !important;
 }
+.disclaimer {
+  display: none;
+}
